--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --color-cloud: #f4f4fd;
   --color-navy-blue-modal: #2e2f42;
   --color-grey: #2e2f42;
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -56,15 +57,19 @@ img {
   text-align: center;
   letter-spacing: 0.04em;
   color: var(--color-iris);
-  background: var(--color-cloud);
+  background-color: var(--color-cloud);
   cursor: pointer;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  transition: background-color var(--transition), 
+              color var(--transition),
+              border-color var(--transition),
+              box-shadow var(--transition);
 }
 
 .btn:hover,
 .btn:focus {
-  background: var(--color-ocean);
+  background-color: var(--color-ocean);
   color: #ffffff;
   border-color: var(--color-ocean);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
@@ -138,10 +143,14 @@ img {
 }
 
 .header-item-link {
+  position: relative;
+  padding-top: 28px;
+  padding-bottom: 28px;
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.02em;
   color: var(--color-grey);
+  transition: color var(--transition);
 }
 
 .header-item-link:hover,
@@ -149,10 +158,25 @@ img {
   color: var(--color-ocean);
 }
 
+.header-item-link.current {
+  color: var(--color-ocean);
+}
+.header-item-link.current::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 0px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-ocean);
+  border-radius: 2px;
+}
+
 .contact {
   font-size: 16px;
   letter-spacing: 0.02em;
   color: var(--color-slate);
+  transition: color var(--transition);
 }
 
 .header-address {
@@ -299,6 +323,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color var(--transition);
 }
 
 .team-soc-link:hover,
@@ -323,9 +348,11 @@ img {
   border: 1px solid var(--color-light-slate);
   border-radius: 4px;
   height: 88px;
+  transition: border var(--transition);
 }
 .customers-icon {
     fill:#AFB1B8
+    transition: fill var(--transition);
 }
 .customers-list-link:hover,
 .customers-list-link:focus {
@@ -386,6 +413,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color var(--transition);
   }
  .soc-icon{
     fill: #FFFFFF;
@@ -409,14 +437,38 @@ img {
 .projects-list-item {
   width: calc((100% - 48px)/3);
   background: #ffffff;
+  
 }
 .projects-link {
   display: block;
+  transition: box-shadow var(--transition);
 }
 .projects-link:hover,
 .projects-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+
+.overlay {
+  position: relative;
+  overflow: hidden;
+}
+.projects-list-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  weight: 100%;
+  height: 100%;
+  padding: 40px 32px;
+  color: var(--color-cloud);
+  background-color: var(--color-iris);
+  transform: translateY(100%);
+  transition: transform var(--transition);
+}
+
+.projects-link:is(:hover, :focus) .projects-list-cover {
+  transform: translateY(0);
 }
 
 .list-btn {
@@ -441,4 +493,54 @@ img {
   border-right: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-bottom: 1px solid #e7e9fc;
+}
+
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.modal {
+  width: 408px;
+  height: 576px;
+  background-color: #FCFCFC;
+  border-radius: 4px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 300ms linear;
+  padding: 30px;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+.modal-close {
+  display: block;
+  margin-left: auto;
+  border-radius: 50%;
+  background-color: #E7E9FC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: fill var(--transition), background-color var(--transition), ;
+}
+
+.modal-close:is(:hover, :focus) {
+  fill: #ffffff;
+  background-color: var(--color-ocean);
+  border: 1px solid transparent;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
