--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,8 @@ img {
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
-  border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid var(--color-cornflower);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -161,6 +162,7 @@ img {
 .header-item-link.current {
   color: var(--color-ocean);
 }
+
 .header-item-link.current::after {
   position: absolute;
   content: '';
@@ -351,7 +353,7 @@ img {
   transition: border var(--transition);
 }
 .customers-icon {
-    fill:#AFB1B8
+    fill:#AFB1B8;
     transition: fill var(--transition);
 }
 .customers-list-link:hover,
@@ -524,7 +526,14 @@ img {
   transform: translate(-50%, -50%) scale(0);
 }
 .modal-close {
-  display: block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 24px;
+  right: 24px;
   margin-left: auto;
   border-radius: 50%;
   background-color: #E7E9FC;
