--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,16 @@ img {
   background-color: var(--color-ocean);
   border-radius: 2px;
 }
+.header-item-link:focus::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 0px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-ocean);
+  border-radius: 2px;
+}
 
 .contact {
   font-size: 16px;
