--- a/css/styles.css
+++ b/css/styles.css
@@ -159,11 +159,7 @@ img {
   color: var(--color-ocean);
 }
 
-.header-item-link.current {
-  color: var(--color-ocean);
-}
-
-.header-item-link.current::after {
+.header-item-link::after {
   position: absolute;
   content: '';
   left: 0;
@@ -172,26 +168,16 @@ img {
   height: 4px;
   background-color: var(--color-ocean);
   border-radius: 2px;
+  opacity: 0;
+  transition: opacity var(--transition);
 }
-.header-item-link:hover::after {
-  position: absolute;
-  content: '';
-  left: 0;
-  bottom: 0px;
-  width: 100%;
-  height: 4px;
-  background-color: var(--color-ocean);
-  border-radius: 2px;
-}
+.header-item-link:hover::after,
 .header-item-link:focus::after {
-  position: absolute;
-  content: '';
-  left: 0;
-  bottom: 0px;
-  width: 100%;
-  height: 4px;
-  background-color: var(--color-ocean);
-  border-radius: 2px;
+ opacity: 1;
+}
+.header-item-link.current::after {
+  color: var(--color-ocean);
+  opacity: 1;
 }
 
 .contact {
